test/expected/explain_cftsrk_v.out
explain void f( this S &self ) const
                       ^
24: error: function with "this" parameter can not be "const"
